[package]
name = "nitf-gnr"
version = "0.1.0"
edition = "2021"

[lib]
name = "nitf_gnr"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.4"
clap = { version = "4.0", features = ["derive"]}
whoami = "1.5.2"
chrono = "0.4"
rayon  = "1.5"
jni = "0.21"
crc32fast = "1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi"] }
